PKT-7 [test] add tests for commands (#63)
* [test] add sample-state-1 for testing purposes

* [feat] add log4j2 configuration file for test

* [test] add tests for ActivePath and LocalPath commands

* [fix] fix paths in ActivePathTest and LocalPathTest setup

* [fix] update ActivePathTest and LocalPathTest to use absolute paths

* [test] add ListTest

* [test] add tests for synced path and unsynced path as arguments in ListTest

* [test] refactor ActivePathTest

* [test] update ListTest to use resolved paths for command tests

* [test] update FileUtils to improve tilde expansion and add OS-specific tests

* [test] update ActivePathTest and LocalPathTest to use invariantSeparatorsPathString for path handling

* [fix] remove debug print statements from ActivateOperation and FileUtilsTest

* [test] simplify assertions in ListTest for unsynced paths

* [test] add tests to init test ActivateTest and PunktOptionGroupTest

* [test] add tests to init test Ignored

* [test] add tests to init test Sync and refine test for Active

* [test] add tests to test Sync for sync command with no argument and existing directory

* [test] refactor ListTest to use parameterized tests

* [test] add missing package path to PunktOptionGroupTest

* [test] modify file dirs in ActiveEqualsLocalFileFilterTest and ExsitsInBothActiveAndLocalFileFilterTest to Temp file dirs and refine ActiveTest and SyncTest

* [test] refactor BaseTestWithTestConfiguration to use companion object for test configuration setup

* [test] refactor ActivateTest to improve setup and teardown, and simplify test cases

* [test] refactor IgnoredTest to extend BaseTestWithTestConfiguration and improve assertion method

* [fix] temporarily disable tests in SyncTest and ActivateTest due to race conditions

---------

Co-authored-by: Wilson05478 <wilson200547@gmail.com>